# nano-pixel-rl

./: .gitignore  README.md  STRATEGY.md  pyproject.toml
dev/: LEADERBOARD.md  LOG.md
docs/: benchmark-contract.md  learner-guide.md
docs/plans/: 2026-06-30-001-feat-benchmark-architecture-plan.md
nano_pixel_rl/benchmark/: __init__.py  __main__.py  evaluate.py  logging.py  metrics.py  rollout.py  speedrun.py  validate_run.py
nano_pixel_rl/env/: __init__.py  interpreter.py  opponent.py  pixelpong.py  rewards.py  tokens.py
nano_pixel_rl/learner/: __init__.py  learner.py  model.py  proposal.py  update.py
nano_pixel_rl/reference/: __init__.py  config.py
runs/: smoke.sh  speedrun.sh
scripts/: eval.py  report.py  train.py
tests/: test_docs_contract.py  test_interpreter_legality.py  test_learner_update.py  test_metrics.py  test_opponents.py  test_pixelpong_dynamics.py  test_reward_contract.py  test_rollout_training.py  test_run_validation.py  test_tokens.py
