[project]
name = "nano-pixel-rl"
version = "0.1.0"
description = "A nanochat-style PixelPong RL speedrun benchmark with shared input/output token space."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jax>=0.4.30",
  "jaxlib>=0.4.30",
  "numpy>=1.26",
  "optax>=0.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
